[package]
name = "ttygrid"
version = "0.2.0"
authors = ["Erik Hollensbe <erik.hollensbe@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Grid layout engine for tabular data displayed in a TTY"
keywords = ["tty", "terminal", "grid", "layout", "tabular"]
repository = "https://github.com/erikh/ttygrid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = ">=0"
anyhow = ">=0"

[dev-dependencies]
rand = ">=0"
