[package]
name = "ttygrid"
version = "0.3.0"
authors = ["Erik Hollensbe <erik.hollensbe@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
description = "Grid layout engine for tabular data displayed in a TTY"
keywords = ["tty", "terminal", "grid", "layout", "tabular"]
repository = "https://github.com/erikh/ttygrid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.27"
anyhow = "^1"

[dev-dependencies]
rand = ">=0"
